--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://chertoha.github.io/ice-cream-project-group-28",
+  "homepage": "https://the-most-trained-trainee.github.io/ice-cream-project-group-28/",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /ice-cream-project-group-28/"
